--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ blinker==1.9.0
 boto3==1.35.60
 botocore==1.35.99
 cachetools==5.5.2
+flask-ngrok
 certifi==2025.8.3
 cffi==1.17.1
 charset-normalizer==3.4.3
