--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+git+https://github.com/roboflow/inference.git#subdirectory=python/inference-sdk
 aiofiles==24.1.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.10.11
