--- a/requirements.txt
+++ b/requirements.txt
@@ -55,7 +55,7 @@ ifaddr==0.2.0
 imageio==2.37.0
 importlib_metadata==8.7.0
 importlib_resources==6.5.2
-inference-sdk
+inference-sdk==0.14.0
 iniconfig==2.1.0
 isodate==0.7.2
 itsdangerous==2.2.0
