--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ exceptiongroup==1.3.0
 fastapi==0.115.14
 filelock==3.17.0
 Flask==3.1.2
+roboflow==1.1.26
 flatbuffers==25.2.10
 fonttools==4.59.1
 frozenlist==1.7.0
