--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-Flask==3.1.2
-roboflow==1.1.26
-opencv-python-headless
-Pillow
-numpy
+numpy<2.0
+opencv-python-headless==4.9.0.80
+roboflow
+flask
 gunicorn
