--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ gunicorn
 pandas
 plotly
 supabase
-inference-sdk==1.1.7
+git+https://github.com/roboflow/inference.git
 pillow==10.3.0
 opencv-python-headless
