--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,5 @@ requests
 supabase
 gunicorn
 opencv-python-headless
-inference-development @ git+https://github.com/roboflow/inference.git#egg=inference-development
+inference-sdk
 
