--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: flask-supabase-app
+    name: clasificador-piña
     env: python
     buildCommand: "pip install -r requirements.txt"
     startCommand: "gunicorn app:app"
